new file:   content/posts/customizing-the-kde-plasma.es.md 	modified:   content/posts/distroreview.es.md 	new file:   content/posts/intro.es.md 	modified:   content/posts/intro.md 	new file:   content/posts/linux-mint-upgrade-on-athlon-pc.es.md 	modified:   public/404.html 	modified:   public/categories/index.html 	modified:   public/categories/index.xml 	modified:   public/index.html 	modified:   public/index.xml 	modified:   public/page/1/index.html 	modified:   public/posts/customizing-the-kde-plasma/index.html 	modified:   public/posts/distroreview/index.html 	modified:   public/posts/futo-keyboard-review/index.html 	modified:   public/posts/index.html 	modified:   public/posts/index.xml 	modified:   public/posts/intro/index.html 	modified:   public/posts/linux-mint-upgrade-on-athlon-pc/index.html 	modified:   public/posts/page/1/index.html 	modified:   public/sitemap.xml 	modified:   public/tags/index.html 	modified:   public/tags/index.xml

--- a/public/404.html
+++ b/public/404.html
@@ -3,10 +3,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><script src="/joolsite/livereload.js?mindelay=10&amp;v=2&amp;port=44295&amp;path=joolsite/livereload" data-no-instant defer></script>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="noodp" /><title>404 Page not found - KeSite</title><meta name="Description" content=""><meta property="og:url" content="http://localhost:44295/joolsite/404.html">
+    <meta name="robots" content="noodp" /><title>404 Page not found - KeSite</title><meta name="Description" content=""><meta property="og:url" content="https://jool402.github.io/joolsite/404.html">
   <meta property="og:site_name" content="KeSite">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:locale" content="en">
@@ -21,7 +21,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
-<link rel="canonical" href="http://localhost:44295/joolsite/404.html" />
+<link rel="canonical" href="https://jool402.github.io/joolsite/404.html" />
 <link rel="stylesheet" href="/joolsite/css/main.min.css"><link rel="stylesheet" href="/joolsite/css/style.min.css"></head>
 
 
